[tool.poetry]
name = "tensortrade"
version = "1.3.0"
description = "tensortrade fork, fixes gym to gymnasium switch compatibility issues"
authors = ["Dmitrii  <dmitry.shibanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.1"
pytest = "^7.4.0"
# finplot = { git = "git@github.com:dshibanov/finplot.git", branch = "master" }
finplot = { git = "https://github.com/dshibanov/finplot.git", branch = "master" }
numpy = ">=1.17.0"
pandas = ">=0.25.0"
gym = ">=0.25.2"
pyyaml = ">=5.1.2"
stochastic = ">=0.6.0"
tensorflow = "2.12"
ipython = ">=7.12.0"
matplotlib = ">=3.1.1"
plotly = ">=4.5.0"
ipywidgets = ">=7.0.0"
deprecated = ">=1.2.13"
ta = "^0.10.2"
pandas-ta = "^0.3.14b0"
gymnasium = "^0.28.1"
ray = {extras = ["tune"], version = "^2.7.1"}
tabulate = "^0.9.0"
dm-tree = "^0.1.8"
scikit-image = "^0.21.0"
lz4 = "^4.3.2"
tensorflow-probability = "^0.20.1"
# finplot = "^1.9.2"
icecream = "^2.1.3"
static-frame = "^2.0.1"
mlflow = "^2.8.1"
bayesian-optimization = "^1.4.3"
optuna = "^3.4.0"
typer = "^0.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks]
install-torch = "pip install torch==2.0.1+cpu torchvision torchaudio -f https://download.pytorch.org/whl/torch_stable.html"
install-torch-forced = "pip install --force-reinstall --no-deps torch==2.1.0+cpu torchvision torchaudio -f https://download.pytorch.org/whl/torch_stable.html"
install-sb = "pip install stable-baselines3==2.0.0"
pip-list = "pip list"
pip-upgrade = "pip install --upgrade pip"

